# Encryption_app

./: .gitignore  README.md  README_RU.md  build.bat  build.txt  change_iss_version.py  installer.iss  main.py  requirements.txt  todo
encryption_algs/: CMakeLists.txt
encryption_algs/kyznechik/: CMakeLists.txt  kyznechik.c  kyznechik.h
encryption_algs/kyznechik/kyznechik-base/: CMakeLists.txt  kyznechik.c  kyznechik.h
encryption_algs/kyznechik/kyznechik-cbc/: CMakeLists.txt  kyznechik-cbc.c  kyznechik-cbc.h
encryption_algs/kyznechik/kyznechik-ctr/: CMakeLists.txt  kyznechik-ctr.c  kyznechik-ctr.h
encryption_algs/kyznechik/kyznechik-ecb/: CMakeLists.txt  kyznechik-ecb.c  kyznechik-ecb.h
encryption_algs/lib_test/: CMakeLists.txt  main.c
encryption_algs/magma/magma-base/: CMakeLists.txt  magma.c  magma.h
encryption_algs/magma/magma-cbc/: CMakeLists.txt  magma-cbc.c  magma-cbc.h
encryption_algs/magma/magma-ctr/: CMakeLists.txt  magma-ctr.c  magma-ctr.h
encryption_algs/magma/magma-ecb/: CMakeLists.txt  magma-ecb.c  magma-ecb.h
encryption_algs/utils/: CMakeLists.txt  utils.c  utils.h
src/: global_flags.py  singleton_storage.py
src/backend/db/: data_base.py  db_records.py
src/backend/encrypt_libs/: abstract_encrypt_class.py  additional_lib.py  encrypt_lib.py  encrypt_lib_class.py  errors.py  loader.py
src/db/: data_base.py
src/frontend/: hmi.py  instance_manager.py  paged_list_view.py
src/frontend/encrypt_window/: encrypt_list.py  encrypt_menu.py  encrypt_window.py  widget_container.py
src/frontend/history_window/: history.py  history_buttons.py  history_window.py  widget_container.py
src/frontend/home_window/: banner.py  home_window.py  lib_info_card.py  main_cards.py  widget_container.py
src/frontend/icons/: icons.py
src/frontend/passwords_window/: passwords.py  passwords_buttons.py  passwords_window.py
src/frontend/settings_window/: custom_config.py  settings.py  settings_window.py  widget_container.py
src/frontend/style_sheets/: style_sheets.py
src/frontend/style_sheets/qss/: encrypt_window.qss  home_window.qss
src/frontend/sub_windows/: message_box.py
src/frontend/sub_windows/file_adder_window/: file_adder_window.py
src/frontend/sub_windows/master_key_creator_window/: master_key_creator.py
src/frontend/sub_windows/message_box/: message_box.py
src/frontend/sub_windows/password_creator_window/: password_creator_window.py
src/frontend/sub_windows/password_input_window/: password_input_window.py
src/locales/: locales.json  locales.py
src/master_key_storage/: master_key_storage.py
src/streebog/: streebog.py
src/style_sheets/: style_sheets.py
src/sub_threads/: loader_thread.py
src/utils/: config.py  utils.py
